2007-04-29  Robert Ancell  <robert.ancell@gmail.com>

	* Set more configuration defaults in case schema is missing (Bug #434097)
        * Use configured data dir for autosaves, not ~/.glchess
        * Execute AIs in ~/.gnome2/glchess/logs to avoid making files in ~ (Bug #424010)

2007-04-25  Robert Ancell  <robert.ancell@gmail.com>

	* Update dummy OpenGL scene to have correct method arguments (Bug #420730)

2007-04-22  Robert Ancell  <robert.ancell@gmail.com>

	* Changed AI process management to remove os.forkpty() (not on Solaris) (Bug #426538)
	* If an AI dies the game completes and the UI displays "opponent has died". This is
	  an actual tag in the PGN spec I was looking for a reason to use!!
	* Catch exception if unable to display help (Bug #432216)
        * Don't consider a missing autoload file an error
	* Catch IOError exceptions when autosaving (Bug #425614)

2007-04-09  Robert Ancell  <robert.ancell@gmail.com>

	* Merged changes from sf.net version 1.0.5:
	  - Added timed play.
	  - Changed nice level for AIs to 19 (they are affecting the animation)
	  - Add choice of board rotation modes (white side, black side, human
	    side, current players side)
	  - Fixed broken OpenGL board rotation
	  - Added 2D rotation

2007-03-20  Andreas Røsdal  <andreasr@gnome.org>

	* glchess.desktop.in: Remove extra space at end of tooltip.
	Patch from Bruce Cowan in bug #410784. 

2007-03-18  Robert Ancell  <robert.ancell@gmail.com>
	* Handle empty filename in save dialog (Gnome bug #419486)
        * gtkui/chessview.py: Change python OpenGL import to make issues with external bindings more visible (Gnome bug #419605)

2007-03-16  Robert Ancell  <robert.ancell@gmail.com>

	* Merged changes from glChess 1.0.4:
	 o Added menu selectable promotion type
	 o AI players now wait for piece animation to end before making moves
	 o Refactored game/scene code
	 o Made move hints optional. (menu item: view->move hints)
	 o Added support for Boo's Chess Engine.