@@ -24,6 +24,18 @@
         <long>The height of the main window in pixels.</long>
       </locale>
     </schema>
+    
+    <schema>
+      <key>/schemas/apps/glchess/maximised</key>
+      <applyto>/apps/glchess/maximised</applyto>
+      <owner>glchess</owner>
+      <type>bool</type>
+      <default>FALSE</default>
+      <locale name="C">
+        <short>A flag to enable maximised mode</short>
+        <long>A flag to enable maximised mode</long>
+      </locale>
+    </schema>
 
     <schema>
       <key>/schemas/apps/glchess/fullscreen</key>
